--- a/frontend/src/assets/styles/01_vendors/_reset.scss
+++ b/frontend/src/assets/styles/01_vendors/_reset.scss
@@ -7,6 +7,7 @@
 
 main {
   background-color: $color-light-gray;
-  height: 100vh;
+  min-height: 100vh;
   max-width: 100vw;
+  padding-bottom: 20px;
 }
