feat: Add pictures logic and breadcrumb styles

--- a/frontend/src/assets/styles/02_base/_colors.scss
+++ b/frontend/src/assets/styles/02_base/_colors.scss
@@ -6,5 +6,6 @@ $color-dark-black: #333333;
 $color-common-white: #ffffff;
 $color-medium-blue: #252e7c;
 $color-light-blue: #1259c3;
+$color-lighter-blue: #3483fa;
 $color-medium-yellow: #fff159;
 $color-medium-green: #00a650;
