--- a/frontend/src/assets/styles/06_pages/_detailed.scss
+++ b/frontend/src/assets/styles/06_pages/_detailed.scss
@@ -59,7 +59,7 @@
     .detailed__actions {
       .detailed__shop {
         width: 100%;
-        background-color: #3483fa;
+        background-color: $color-lighter-blue;
         border-color: transparent;
         color: #fff;
         box-shadow: 0 0 0 0 #fff;
@@ -84,9 +84,36 @@
     min-height: 500px;
 
     &__gallery {
-      &__gallery-item {
-        width: 48px;
-        height: 48px;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      flex-wrap: nowrap;
+      justify-content: flex-start;
+
+      &-input {
+        border: none;
+        display: none;
+
+        &:checked ~ .detailed-image__gallery-item,
+        &:active ~ .detailed-image__gallery-item,
+        &:focus ~ .detailed-image__gallery-item {
+          border: 2px solid $color-lighter-blue;
+        }
+      }
+
+      &-image {
+        width: 44px;
+        height: 44px;
+        padding: 2px;
+        img {
+          width: 100%;
+          height: calc(100% - 2px);
+        }
+      }
+
+      &-item {
+        width: 44px;
+        height: 44px;
         margin-bottom: 8px;
         border: 1px solid rgba(0, 0, 0, 0.25);
         border-radius: 6px;
@@ -96,13 +123,7 @@
         font-weight: 400;
         margin-right: 8px;
         overflow: hidden;
-        padding: 0;
         position: relative;
-
-        img {
-          width: 100%;
-          height: 100%;
-        }
       }
     }
 
@@ -110,10 +131,11 @@
       margin-top: 24px;
       padding: 16px;
       width: 700px;
+      max-height: 500px;
 
       img {
         width: 100%;
-        height: 100%;
+        max-height: 100%;
         cursor: zoom-in;
         height: auto;
         object-fit: contain;
@@ -137,5 +159,30 @@
     width: 100%;
     border-bottom: 1px solid $color-light-gray;
     margin-bottom: 40px;
+  }
+
+  .breadcrumb {
+    margin-bottom: 12px;
+    &__return,
+    &__link {
+      text-decoration: none;
+      cursor: pointer;
+      font-size: 14px;
+    }
+    &__divider {
+      color: rgba(0, 0, 0, 0.2);
+      margin-right: 10px;
+    }
+    &__return {
+      color: rgba(0, 0, 0, 0.9);
+      margin: 0 14px 0 0;
+      transition: all 0.5s;
+      &:hover {
+        color: $color-lighter-blue;
+      }
+    }
+    &__link {
+      color: $color-lighter-blue;
+    }
   }
 }
