--- a/frontend/src/assets/styles/06_pages/_list-items.scss
+++ b/frontend/src/assets/styles/06_pages/_list-items.scss
@@ -32,7 +32,7 @@
       margin-bottom: 16px;
       margin-top: 4px;
       bottom: 2px;
-      color: $color-dark-black;
+      color: rgba($color-dark-black, 0.8);
       font-size: 14px;
       font-weight: 300;
       line-height: 1.29;
