--- a/frontend/src/assets/styles/02_base/_fonts.scss
+++ b/frontend/src/assets/styles/02_base/_fonts.scss
@@ -3,9 +3,10 @@
   src: url('../../fonts/ProximaNova-Bold.ttf') format('truetype'), url('../../fonts/ProximaNova-Bold.woff') format('woff'),
     url('../../fonts/ProximaNova-Bold.woff') format('woff2'), url('../../fonts/ProximaNova-Light.ttf') format('truetype'),
     url('../../fonts/ProximaNova-Light.ttf') format('woff'), url('../../fonts/ProximaNova-Light.ttf') format('woff2'),
-    url('../../fonts/ProximaNova-Regular.ttf') format('truetype'), url('../../fonts/ProximaNova-Regular.ttf') format('woff'),
-    url('../../fonts/ProximaNova-Regular.ttf') format('woff2'), url('../../fonts/ProximaNova-Semibold.ttf') format('truetype'),
-    url('../../fonts/ProximaNova-Regular.ttf') format('woff'), url('../../fonts/ProximaNova-Regular.ttf') format('woff2');
+    url('../../fonts/ProximaNova-Regular.ttf') format('truetype'), url('../../fonts/ProximaNova-Semibold.ttf') format('truetype'),
+    url('../../fonts/ProximaNova-Regular.ttf') format('woff'), url('../../fonts/ProximaNova-Regular.ttf') format('woff2'),
+    url('../../fonts/ProximaNovaT-Thin.ttf') format('truetype'), url('../../fonts/ProximaNovaT-Thin.woff') format('woff'),
+    url('../../fonts/ProximaNovaT-Thin.woff2') format('woff2');
 }
 
 $font-primary: 'Proxima Nova', -apple-system, Roboto, Arial, sans-serif, sans-serif;
