--- a/frontend/src/assets/styles/06_pages/_list-items.scss
+++ b/frontend/src/assets/styles/06_pages/_list-items.scss
@@ -136,4 +136,57 @@
       }
     }
   }
+
+  .not-results {
+    margin: 0 auto;
+    max-width: 1220px;
+    padding: 0 10px;
+    &-container {
+      border-radius: 4px;
+      align-items: center;
+      flex-direction: row;
+      justify-content: center;
+      margin: 48px auto;
+      max-width: 1018px;
+      width: 100%;
+      min-height: 204px;
+      padding: 42px 100px 32px;
+      background-color: $color-common-white;
+      display: flex;
+    }
+    &__icon {
+      margin-right: 35px;
+      vertical-align: middle;
+      color: $color-dark-gray;
+      font-size: 98px;
+      display: inline;
+    }
+    &__info {
+      &-title {
+        font-size: 24px;
+        font-weight: 500;
+        line-height: 1.08;
+      }
+      &-list {
+        font-size: 16px;
+        font-weight: 300;
+        margin: 18px 10px 10px 0;
+        li {
+          color: rgba(0, 0, 0, 0.8);
+          line-height: 1.231;
+          list-style-position: outside;
+          list-style-type: disc;
+          margin-bottom: 3px;
+          margin-left: 18px;
+        }
+        &--bolder {
+          font-weight: 600;
+        }
+        &--link {
+          text-decoration: none;
+          color: $color-medium-blue;
+        }
+      }
+    }
+  }
 }
